# octos-dora-bridge

./: .gitignore  ADDING_HARDWARE.md  DEPLOYMENT.md  DORA_1.0_RC1.md  README.md  REBOT_DEMO.md  RUNNING_SO101.md  manual_nav_viz.md  manual_skill.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
bridge/: README.md  pyproject.toml
bridge/octos_spec_bridge/: __init__.py  __main__.py  dora_loop.py  heartbeat.py  http_api.py  state_cache.py  translator.py
bridge/tests/: conftest.py  test_dora_loop.py  test_gripper_merge.py  test_heartbeat.py  test_http_api.py  test_main_smoke.py  test_repeatability_multivendor.py  test_state_cache.py  test_translator.py
dataflows/: a2-bridge-fake.yaml  a2-bridge.yaml  adora-hw-bridge.yaml  g1-bridge.yaml  lekiwi-mujoco-bridge.yaml  nav-base-bridge.yaml  nav-base-viz.yml  navi-bridge.yaml  rebot-mujoco-bridge.yaml  so101-hw-bridge.yaml  so101-mujoco-bridge.yaml  ur5e-bridge.yaml  ur5e-mujoco-bridge.yaml  venv-python  venv-python-dora1
examples/: _demo_common.py  arm_agent.py  arm_demo_driver.py  arm_pick_place_driver.py  arm_pick_place_joint_driver.py  arm_skills.py  ball_state.py  fake_localization.py  fake_planner.py  grasp_probe.py  gripper_merge.py  ik_solve_grasp.py  lekiwi_agent.py  lekiwi_demo_driver.py  lekiwi_kinematics.py  lekiwi_mujoco_sim.py  lekiwi_render_video.py  lekiwi_scene.py  nav_demo_driver.py  nav_demo_loop.py  nav_mpl_viz.py  nav_render_mp4.py  nav_rerun_viz.py  nav_toy_sim.py  pick_place_poses.py  qpos_dump.py  run-so101-demo.sh  run-so101-isolated.sh  skill_pickplace.py  tcp_probe.py
scripts/: probe-arm-motion.sh  probe-qpos.sh  probe-tcp.sh  run-arm-agent.sh  run-arm-pickplace.sh  run-arm-viz.sh  run-lekiwi-viz.sh  run-nav-viz-asus-dora1.sh  run-nav-viz-asus.sh  run-nav-viz.sh  run-rebot-agent.sh  run-rebot-pickplace.sh  setup.sh  setup_adora_hw.sh  smoke-against-sim.sh
skills/Adora-RGB-pick/: main  (+6 more)
tests/: test_e2e_fake_http.py  test_gripper_merge.py  test_lekiwi_kinematics.py  test_lekiwi_scene.py  test_lekiwi_skill_tool.py  test_nav_toy_sim.py  test_pick_place_poses.py  test_repeatability_multivendor.py
(+29 files in other folders)
